k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockerized-microservices
  labels:
    app.kubernetes.io/name: dockerized-microservices
