k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: dockerized-microservices
  labels:
    app.kubernetes.io/name: dockerized-microservices
    app: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: backend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: dockerized-microservices
  labels:
    app.kubernetes.io/name: dockerized-microservices
    app: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: frontend
